--- a/sem_grade_w_emoji.ipynb
+++ b/sem_grade_w_emoji.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "sem grade w/ emoji ",
       "provenance": [],
-      "authorship_tag": "ABX9TyM8aLnPFiTW6+USQkQBkuNr",
+      "authorship_tag": "ABX9TyPWUKch08MvEhR9IFh9S5Fy",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -38,34 +38,8 @@
         "\n",
         "\n",
         "sem_grade = float (0.30*pg + 0.30*mg + 0.40*fg)\n",
-        "\n"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "3Ci52buVDpqn",
-        "outputId": "93fe3e4d-c1cc-45fb-dd4e-7b98e45c1842"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "input name: mariam\n",
-            "enter course name: linear\n",
-            "enter prelim grade: 85\n",
-            "enter midterm grade: 85\n",
-            "enter final grade: 65\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "print(\"Hello {}, your semestral grade for {} is: {}\".format(name, course, sem_grade))\n",
+        "\n",
+        "print(\"Hello {}, your semestral grade for {} is: {:.2f}\".format(name, course, sem_grade))\n",
         "\n",
         "\n",
         "if(sem_grade > 70.00):\n",
@@ -79,16 +53,21 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "u2iJXCXqbR_8",
-        "outputId": "f4172fc8-cdd8-4699-b50f-119ed495717e"
+        "id": "3Ci52buVDpqn",
+        "outputId": "79d27805-e2fa-44d4-c3e3-f51b08f836be"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Hello mariam, your semestral grade for linear is: 77.0\n",
+            "input name: mariam\n",
+            "enter course name: linear\n",
+            "enter prelim grade: 90\n",
+            "enter midterm grade: 70\n",
+            "enter final grade: 90\n",
+            "Hello mariam, your semestral grade for linear is: 84.00\n",
             "😀\n"
           ]
         }
